--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <ul>
                         <li>Talking with Friends</li>
                         <li>Games</li>
-                        <li>Animals</li>
+                        <li>Programming</li>
                     </ul>
                 </section>
     
