--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <title>Chandler's Unenertaining Website</title>
        <style>
            body {
-               background:rgb(125,198,205);
+               background:rgb(128,0,0);
                color:rgb(45,45,45);
                padding: 10px;
                font-family: arial;
@@ -69,7 +69,7 @@
     <body>
         <div id="all-contents">
             <nav>
-                <header>Straight Facts</header>
+                <header>Chanhub</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
