--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
             </main>
             <header>Chandlers Glorius Website</header>
             <ul>
-                <li><a href="index.html"<Home</a>
+                <li><a href="index.html">Home</a>
                 </li>
                 <li><a href="portfolio.html">Portfolio</a>
                 </li>
