--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <body>
         <div id="all-contents">
             <nav>
-                <header>Chanhub</header>
+                <header>Chandler's Unenertaining Website</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
@@ -87,7 +87,7 @@
                 <section class="interests">
                     <header>Interests</header>
                     <ul>
-                        <li>Talking with Friends</li>
+                        <li>Piano</li>
                         <li>Games</li>
                         <li>Programming</li>
                     </ul>
