--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
                     </ul>
                 </div>
             </main>
-            <header>Chandlers Glorius Website</header>
+            <header>Chandlers Unenertaining Website</header>
             <ul>
                 <li><a href="index.html">Home</a>
                 </li>
