--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -44,7 +44,7 @@
 
 			// jQuery stuff setup for you
 			box = $('.box');
-			boardWidth = $('.board').width();
+			boardWidth = /*global $/('.board').width();
 
 			// TODO 2
 			var position;
