--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chandler's Portfolio</title>
+        <title> Chandler's Unenertaining Website</title>
         <style type="text/css">
             body {
                 background: rgb(128,0,0);
@@ -16,6 +15,7 @@
             }
             h1 {
                 margin: 10px;
+                border-radius:20px;
             }
             #all-contents {
                 max-width: 800px;
@@ -28,7 +28,7 @@
                 margin: 0 auto;
                 display: flex;
                 padding: 10px;
-                border-radius: 25px;
+                border-radius: 20px;
             }
             nav header {
                 display: flex;
@@ -57,7 +57,7 @@
                 flex: 1;
                 padding: 15px;
             }
-            /* portfolio styles */
+                        /* portfolio styles */
             #portfolio {
                 list-style-type: none;
                 padding-left: 0;
@@ -80,28 +80,25 @@
             }
         </style>
     </head>
-    
     <body>
-        <nav>
+        <div id="all-contents">
+            <nav>
+                <header>Chandler's Portfolio</header>
+                <ul id="portfolio">
+                    <li><a href="index.html">Home</a>
+                    </li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
             <main>
                 <div class="content">
                     <h1>Portfolio</h1>
-                    <ul id="portfolio">
+                    </ul id="portfolio">
                     </ul>
                 </div>
             </main>
-            <header>Chandlers Unenertaining Website</header>
-            <ul>
-                <li><a href="index.html">Home</a>
-                </li>
-                <li><a href="portfolio.html">Portfolio</a>
-                </li>
-            </ul>
-        </nav>
-        <div id="all-contents">
-            
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script id="portfolioScript">$(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
+        <script id="portfolioScript">/*global $*/(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
     </body>
 </html>
